# qr_code_generator

./: Cargo.toml  build.rs  readme.md
src/: lib.rs  main.rs
ui/: app-window.slint
