[package]
name = "qr_code_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
image = "0.25.5"
qrcode = "0.14.1"
rfd = "0.15.2"
slint = "1.9.2"

[build-dependencies]
slint-build = "1.9.2"

[profile.release]
debug = 0
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
